--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    Full Stack Developer with about 6 months of experience working with Node.js, HTML, CSS, React and currently learning Python (Django).
+                    Full Stack Developer with about 1 year of experience working with Node.js, HTML, CSS, React and Python (Django).
                     I am also an Industrial Engineer with more than 3 and a half years of experience in Information Technology companies as an IT Process Engineer,
                     building, designing, applying and improving processes for the clients of the companies with which I have worked. Likewise, 
                     I have worked in the technical support area as on-site support, service leader and project leader. But my real passion is programming and working
@@ -169,7 +169,7 @@
                         <p class="resume-block__header-meta">
                             <span>Full Stack Developer</span> 
                             <span class="resume-block__header-date">
-                                January 2022 - July 2022
+                                June 2021 - July 2022
                             </span>
                         </p>
                     </div>
