--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <h3>
                         I am a <span>Full Stack Developer</span> from Academlo programming school and an <span>Industrial Engineer</span> from Santiago de Cali University. 
-                        Passionate about technology and software development issues with the desire to learn a lot about this world. I have six months of experience as a programmer and
+                        Passionate about technology and software development issues with the desire to learn a lot about this world. I have 1 year of experience as a programmer and
                         I really want to continue learning more. Day by day I am constantly learning, improving the skills already acquired and learning new technologies.
                         Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
