--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <h1>I'm David Maradiago.</h1>
 
                     <h3>
-                        I am a dedicated <span>Backend Developer</span>, equipped with a degree in <span>Industrial
+                        I am a dedicated <span>Software Developer</span>, equipped with a degree in <span>Industrial
                         Engineering</span> with an emphasis in IT processes from Santiago de Cali University,
                         complemented by comprehensive training at Academlo programming school. My journey in technology
                         and software development has been fueled by an insatiable
@@ -129,15 +129,15 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/David Maradiago.PNG" alt="">
+                <img class="s-about__pic" src="images/avatars/Foto David Maradiago.jpeg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    I am a Backend Developer with 2.5 years of experience in software development. My expertise lies in
+                    I am a Backend Developer with 3 years of experience in software development. My expertise lies in
                     technologies such as .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
-                    React, HTML, CSS and I am willing to learn more technologies depending of the needs of my team work.
+                    React, HTML, CSS and worked with the Agile Methodology SCRUM. I am also willing to learn more technologies depending of the needs of my team work.
 
                     Prior to my role as a developer, I accrued over 3.5 years of experience as an Industrial Engineer
                     specializing in Information Technology. In this capacity, I excelled in roles such as IT Process
