--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    I am a Backend Developer with 3 years of experience in software development. My expertise lies in
+                    I am a Software Developer with 3 years of experience in software development. My expertise lies in
                     technologies such as .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
-                    React, HTML, CSS and worked with the Agile Methodology SCRUM. I am also willing to learn more technologies depending of the needs of my team work.
+                    React, HTML, CSS and worked with the Agile Methodology SCRUM. 
+                    I am also willing to learn more technologies depending of the needs of my team work.
 
                     Prior to my role as a developer, I accrued over 3.5 years of experience as an Industrial Engineer
                     specializing in Information Technology. In this capacity, I excelled in roles such as IT Process
