--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <h3>
                         I am a dedicated <span>Software Developer</span>, equipped with a degree in <span>Industrial
-                        Engineering</span> with an emphasis in IT processes from Santiago de Cali University,
+                            Engineering</span> with an emphasis in IT processes from Santiago de Cali University,
                         complemented by comprehensive training at Academlo programming school. My journey in technology
                         and software development has been fueled by an insatiable
                         curiosity and a fervent desire to excel in this dynamic field. With over two and a half years of
@@ -93,14 +93,6 @@
                         Let's <a class="smoothscroll" href="#about">delve deeper</a> into my journey as you discover
                         more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
-
-                    <div class="s-hero__content-social">
-                        <a target="_blank" href="https://www.linkedin.com/in/javier-david-maradiago-rodr%C3%ADguez/"><i
-                                class="fab fa-linkedin" aria-hidden="true"></i></a>
-                        <a target="_blank" href="https://github.com/jdmaradiago2000"><i class="fab fa-github"
-                                aria-hidden="true"></i></a>
-                    </div>
-
                 </div> <!-- end s-hero__content-about -->
 
             </div>
@@ -137,7 +129,7 @@
                     I am a Software Developer with 3 years of experience in software development. My expertise lies in
                     technologies such as .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
-                    React, HTML, CSS and worked with the Agile Methodology SCRUM. 
+                    React, HTML, CSS and worked with the Agile Methodology SCRUM.
                     I am also willing to learn more technologies depending of the needs of my team work.
 
                     Prior to my role as a developer, I accrued over 3.5 years of experience as an Industrial Engineer
@@ -160,8 +152,7 @@
 
                         <p>
                             Javier David Maradiago Rodríguez <br>
-                            2315 N Tennessee Blvd Apt 9105 Murfreesboro, TN 37130<br>
-                            United States of America, Tennessee, Murfreesboro, The Preserve<br>
+                            Murfreesboro, Tennessee<br>
                             <a href="tel:+16292174797">(+1) 6292174797</a> <br>
                             <a href="mailto:jdmaradiago2000@gmail.com">jmaradiago2000@gmail.com</a>
                         </p>
@@ -195,43 +186,87 @@
             </div>
             <div class="column large-9 tab-12">
                 <div class="resume-block">
-
                     <div class="resume-block__header">
-                        <h4 class="h3">ARUS</h4>
+                        <h4 class="h3">OPTECOM S.A</h4>
                         <p class="resume-block__header-meta">
-                            <span>Full Stack Developer</span>
+                            <span>Software Developer</span>
                             <span class="resume-block__header-date">
-                                June 2021 - July 2022
+                                August 2022 - December 2023
                             </span>
                         </p>
                     </div>
-                    <p>
-                        Responsible for supporting the application development area by modifying and reviewing the
-                        Front-End and Back-End of the applications developed internally or for clients.
-                    </p>
-
+                    <ul>
+                        <li>Designed, developed, and deployed robust backend solutions for diverse projects.</li>
+                        <li>Collaborated closely with cross-functional teams to create APIs, integrate with existing
+                            APIs, and develop console applications tailored to client needs.</li>
+                        <li>Assumed ownership of the full spectrum of backend development, including database design and
+                            management in both on-premise and cloud environments.</li>
+                        <li>Utilized SQL Server expertise to optimize stored procedures, ensuring efficient data
+                            retrieval and manipulation.</li>
+                        <li>Demonstrated proficiency in cloud technologies, particularly Microsoft Azure, by
+                            orchestrating project pipelines and facilitating seamless deployments.</li>
+                        <li>Deployed and managed applications on both on-premise and cloud servers, ensuring optimal
+                            performance and reliability.</li>
+                        <li>Actively contributed to full-stack projects, architecting solutions encompassing backend,
+                            database, and frontend components.</li>
+                        <li>Utilized Docker for packaging applications, streamlining deployment processes.</li>
+                        <li>Embraced Agile methodologies, particularly Scrum, to drive project success through iterative
+                            development and continuous improvement.</li>
+                        <li>Thrived in a dynamic, collaborative environment, fostering cross-disciplinary collaboration
+                            across Cloud, DevOps, and architecture.</li>
+                        <li>Maintained a proven track record of delivering innovative solutions and exhibiting a
+                            commitment to excellence in software development.</li>
+                    </ul>
                 </div> <!-- end resume-block -->
 
                 <div class="resume-block">
-
                     <div class="resume-block__header">
-                        <h4 class="h3">ARUS</h4>
+                        <h4 class="h3">ARUS S.A</h4>
+                        <p class="resume-block__header-meta">
+                            <span>JUNIOR Developer</span>
+                            <span class="resume-block__header-date">
+                                June 2020 - July 2022
+                            </span>
+                        </p>
+                    </div>
+                    <ul>
+                        <li>Assisted in the development and integration of APIs, as well as the creation of console
+                            applications according to project specifications.</li>
+                        <li>Collaborated with team members across departments, including Cloud, DevOps, and
+                            architecture, to achieve project goals.</li>
+                        <li>Supported the team in modifying both frontend and backend components of applications created
+                            for internal clients, ensuring alignment with project requirements.</li>
+                        <li>Contributed to backend development initiatives for various projects, collaborating closely
+                            with senior team members.</li>
+                        <li>Participated in application deployment and management activities, gaining exposure to both
+                            on-premise and cloud environments.</li>
+                        <li>Engaged in full-stack projects, assisting in the development of backend, database, and
+                            frontend components.</li>
+                        <li>Acquired knowledge of Agile methodologies, such as Scrum, and actively contributed to
+                            project sprints and meetings by working on user stories assigned to the team.</li>
+                        <li>Demonstrated a proactive attitude towards learning and growth, leveraging opportunities to
+                            build skills and contribute to team success.</li>
+                    </ul>
+                </div> <!-- end resume-block -->
+
+                <div class="resume-block">
+                    <div class="resume-block__header">
+                        <h4 class="h3">ARUS S.A</h4>
                         <p class="resume-block__header-meta">
                             <span>Process analyst</span>
                             <span class="resume-block__header-date">
-                                December 2018 - July 2022
+                                December 2018 - June 2020
                             </span>
                         </p>
                     </div>
                     <p>
-                        Responsible for designing, maintaining and improving IT processes based on the ITIL best
+                        Accountable for designing, optimizing, and overseeing IT processes in alignment with ITIL best
                         practices framework.
-                        Responsible for the documentation of processes, procedures, instructions, supporting documents
-                        associated with the processes of the different clients of the company.
-                        Provide support to the operations area as contract leader and service leader in different
-                        projects in which it was necessary.
+                        Efficiently document processes, procedures, and supporting materials for various client
+                        projects.
+                        Serve as a focal point for operational support, leading contracts and services across multiple
+                        projects
                     </p>
-
                 </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section -->
@@ -291,11 +326,49 @@
                 <div class="resume-block">
 
                     <p>
-                        Full Stack Developer with about 6 months of experience working with Node.js, HTML, CSS, React
-                        and currently learning Python (Django).
+                        Versatile Software Developer with 3 years of dedicated involvement in software development. My
+                        core competencies encompass
+                        a wide array of technologies including .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube,
+                        Postman, Docker, Git, and GitHub.
+                        Furthermore, I possess proficiency in Node.js, Python (Django), TypeScript, JavaScript, React,
+                        HTML, and CSS. I maintain a proactive
+                        stance towards continuous learning and adaptation, readily embracing new technologies to meet
+                        the evolving needs of my team
+                        and projects.
+
                     </p>
 
+                    <ul>
+                        <li>Development of RESTful APIs and console applications using .NET.</li>
+                        <li>Proficient in SQL Server for database administration and management.</li>
+                        <li>Experience in leveraging Microsoft Azure to orchestrate project pipelines and facilitate
+                            code deployment.</li>
+                        <li>Version control and collaboration using Git & GitHub.</li>
+                        <li>Building interactive web applications with Angular.</li>
+                        <li>Implementation of continuous integration and continuous deployment (CI/CD) processes with
+                            Jenkins.</li>
+                        <li>Utilization of SonarQube for code quality analysis and continuous inspection.</li>
+                        <li>Testing and API development using Postman.</li>
+                        <li>Containerization of applications using Docker.</li>
+                    </ul>
+
                     <ul class="skill-bars-fat">
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>C#</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>.NET Core</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>.NET Framework</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent70"></div>
+                            <strong>SQL Server</strong>
+                        </li>
                         <li>
                             <div class="progress percent75"></div>
                             <strong>HTML</strong>
@@ -309,16 +382,8 @@
                             <strong>Javascript</strong>
                         </li>
                         <li>
-                            <div class="progress percent70"></div>
-                            <strong>React</strong>
-                        </li>
-                        <li>
                             <div class="progress percent75"></div>
-                            <strong>Node.js</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent75"></div>
-                            <strong>Python</strong>
+                            <strong>Angular</strong>
                         </li>
                     </ul>
 
@@ -365,8 +430,8 @@
 
             <div class="column folio-item">
                 <a href="#modal-04" class="folio-item__thumb">
-                    <img src="images/portfolio/crud.jpg" srcset="images/portfolio/crud.jpg 1x, 
-                                 images/portfolio/crud@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/beers-crud.jpg" srcset="images/portfolio/Beers-crud.jpg 1x, 
+                                 images/portfolio/Beers-crud@2x.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
@@ -459,7 +524,7 @@
 
         <div id="modal-04" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-crud.jpg" alt="" />
+                <img src="images/portfolio/gallery/g-beers-crud.jpg" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>Users CRUD</h5>
@@ -470,7 +535,7 @@
                     </ul>
                 </div>
 
-                <a href="https://crud-usuarios-david.netlify.app/" target="_BLANK" class="modal-popup__details">Project
+                <a href="https://github.com/jdmaradiago2000/Beer-CRUD.git" target="_BLANK" class="modal-popup__details">Project
                     link</a>
             </div>
         </div> <!-- end modal -->
@@ -573,8 +638,9 @@
             <div class="column large-7 medium-12">
 
                 <h4 class="huge-text">
-                    Are you looking for a junior developer with a lot of motivation and desire to learn? Let's work
-                    together and change the world :)
+
+                    Are you seeking a driven Software Developer poised to make a significant impact? Let's collaborate
+                    to drive innovation and shape the future.
                 </h4>
 
             </div>
@@ -598,7 +664,7 @@
                                 Phone
                             </h5>
                             <p class="contact-block__content">
-                                <a href="tel:(+57) 3194225663">(+57) 3194225663</a>
+                                <a href="tel:(+57) 3194225663">(+1) 6292174797</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
@@ -625,18 +691,11 @@
                                 class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                     <li><a target="_blank" href="https://github.com/jdmaradiago2000"><i class="fab fa-github"
                                 aria-hidden="true"></i></a></li>
-                    <li><a target="_blank"
-                            href="https://api.whatsapp.com/send?phone=+573194225663&amp;text= Hello!%20I want to%20contact you,%20I am%20interested%20in your%20profile!"><i
-                                class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
-                    <li><a target="_blank" href="https://twitter.com/MaradiagoJavier"><i class="fab fa-twitter"
-                                aria-hidden="true"></i></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/jdmaradiago22/"><i class="fab fa-instagram"
-                                aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>© Copyright David Maradiago 2022</span>
+                <span>© Copyright David Maradiago 2024</span>
             </div>
         </div>
 
