--- a/index.html
+++ b/index.html
@@ -74,24 +74,14 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1>I'm David Maradiago.</h1>
+                    <h1>I am David Maradiago</h1>
 
                     <h3>
-                        I am a dedicated <span>Software Developer</span>, equipped with a degree in <span>Industrial
-                            Engineering</span> with an emphasis in IT processes from Santiago de Cali University,
-                        complemented by comprehensive training at Academlo programming school. My journey in technology
-                        and software development has been fueled by an insatiable
-                        curiosity and a fervent desire to excel in this dynamic field. With over two and a half years of
-                        hands-on experience primarily in backend development,
-                        I have honed my skills and embraced challenges that have enriched my expertise. Additionally, I
-                        have supported my team as a Full Stack Developer,
-                        where I leveraged my versatility to contribute across the development stack. My passion for
-                        growth is relentless,
-                        as I eagerly pursue opportunities to expand my knowledge base and embrace emerging technologies.
-                        Each day presents a new opportunity for me to enhance my capabilities,
-                        refine existing skills, and embark on new learning ventures.
-                        Let's <a class="smoothscroll" href="#about">delve deeper</a> into my journey as you discover
-                        more <a class="smoothscroll" href="#about">about me</a>.
+                        I am a Full Stack <span>Software Engineer</span>, with over seven years of experience in both software and web development.
+                        I’ve worked extensively with technologies like C#, Python, and JavaScript, and I’m familiar with frameworks such as ASP.NET, Blazor, Angular, and React. 
+                        I also have experience with SQL Server and various other tools, including Microsoft Azure, Jenkins, SonarQube, Postman, Git, GitHub, as well as HTML and CSS.
+
+                        Let's <a class="smoothscroll" href="#about">delve deeper</a> into my journey as you discover more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
                 </div> <!-- end s-hero__content-about -->
 
@@ -126,8 +116,8 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    I am a Software Developer with 3 years of experience in software development. My expertise lies in
-                    technologies such as .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
+                    I am a Software Software Engineer with 7+ years of experience in software and web development. My expertise lies in
+                    technologies such as .NET, C#, ASP .Net, Blazor, Python, JavaScript, Angular, React, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
                     React, HTML, CSS and worked with the Agile Methodology SCRUM.
                     I am also willing to learn more technologies depending of the needs of my team work.
@@ -187,11 +177,11 @@
             <div class="column large-9 tab-12">
                 <div class="resume-block">
                     <div class="resume-block__header">
-                        <h4 class="h3">OPTECOM S.A</h4>
+                        <h4 class="h3">Netsurion</h4>
                         <p class="resume-block__header-meta">
-                            <span>Software Developer</span>
+                            <span>Full Stack Software Engineer</span>
                             <span class="resume-block__header-date">
-                                August 2022 - December 2023
+                                February 2019 – April 2024
                             </span>
                         </p>
                     </div>
@@ -221,11 +211,11 @@
 
                 <div class="resume-block">
                     <div class="resume-block__header">
-                        <h4 class="h3">ARUS S.A</h4>
+                        <h4 class="h3">Optecom S.A</h4>
                         <p class="resume-block__header-meta">
-                            <span>JUNIOR Developer</span>
+                            <span>Software Developer</span>
                             <span class="resume-block__header-date">
-                                June 2020 - July 2022
+                                August 2016 – January 2019
                             </span>
                         </p>
                     </div>
@@ -247,26 +237,6 @@
                         <li>Demonstrated a proactive attitude towards learning and growth, leveraging opportunities to
                             build skills and contribute to team success.</li>
                     </ul>
-                </div> <!-- end resume-block -->
-
-                <div class="resume-block">
-                    <div class="resume-block__header">
-                        <h4 class="h3">ARUS S.A</h4>
-                        <p class="resume-block__header-meta">
-                            <span>Process analyst</span>
-                            <span class="resume-block__header-date">
-                                December 2018 - June 2020
-                            </span>
-                        </p>
-                    </div>
-                    <p>
-                        Accountable for designing, optimizing, and overseeing IT processes in alignment with ITIL best
-                        practices framework.
-                        Efficiently document processes, procedures, and supporting materials for various client
-                        projects.
-                        Serve as a focal point for operational support, leading contracts and services across multiple
-                        projects
-                    </p>
                 </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section -->
@@ -326,7 +296,7 @@
                 <div class="resume-block">
 
                     <p>
-                        Versatile Software Developer with 3 years of dedicated involvement in software development. My
+                        Software Engineer with 7+ years of dedicated involvement in software development. My
                         core competencies encompass
                         a wide array of technologies including .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube,
                         Postman, Docker, Git, and GitHub.
@@ -363,6 +333,14 @@
                         </li>
                         <li>
                             <div class="progress percent75"></div>
+                            <strong>ASP.NET Core</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>.NET Blazor</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
                             <strong>.NET Framework</strong>
                         </li>
                         <li>
@@ -384,6 +362,18 @@
                         <li>
                             <div class="progress percent75"></div>
                             <strong>Angular</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>React</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>Python</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"></div>
+                            <strong>Django</strong>
                         </li>
                     </ul>
 
