--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Javier David Maradiago Rodríguez</title>
+    <title>Javier David Maradiago</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -77,9 +77,9 @@
                     <h1>I am David Maradiago</h1>
 
                     <h3>
-                        I am a Full Stack <span>Software Engineer</span>, with over seven years of experience in both software and web development.
-                        I’ve worked extensively with technologies like C#, Python, and JavaScript, and I’m familiar with frameworks such as ASP.NET, Blazor, Angular, and React. 
-                        I also have experience with SQL Server and various other tools, including Microsoft Azure, Jenkins, SonarQube, Postman, Git, GitHub, as well as HTML and CSS.
+                        I am a Full Stack <span>Software Engineer</span>, with over three years of experience in both software and web development.
+                        I’ve worked with technologies like .Net, C#, Blazor, Sql Server, CosmosDB, JavaScript, Angular, React and Python. 
+                        I also have experience with tools like Microsoft Azure, Jenkins, SonarQube, Postman, Git, GitHub, as well as HTML and CSS.
 
                         Let's <a class="smoothscroll" href="#about">delve deeper</a> into my journey as you discover more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
@@ -116,8 +116,8 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                    I am a Software Software Engineer with 7+ years of experience in software and web development. My expertise lies in
-                    technologies such as .NET, C#, ASP .Net, Blazor, Python, JavaScript, Angular, React, SQL Server, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
+                    I am a Software Software Engineer with over three years of experience in software and web development. My expertise lies in
+                    technologies such as .NET, C#, ASP .Net, Blazor, Python, JavaScript, Angular, React, SQL Server, CosmosDB, Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git,
                     and GitHub. Additionally, I have proficiency in Node.js, Python (Django), TypeScript, JavaScript,
                     React, HTML, CSS and worked with the Agile Methodology SCRUM.
                     I am also willing to learn more technologies depending of the needs of my team work.
@@ -141,7 +141,7 @@
                         <h3>Contact Details</h3>
 
                         <p>
-                            Javier David Maradiago Rodríguez <br>
+                            Javier David Maradiago<br>
                             Murfreesboro, Tennessee<br>
                             <a href="tel:+16292174797">(+1) 6292174797</a> <br>
                             <a href="mailto:jdmaradiago2000@gmail.com">jmaradiago2000@gmail.com</a>
@@ -149,7 +149,7 @@
 
                     </div>
                     <div class="column w-1000-stack">
-                        <a target="_blank" href="./cv/CV Javier David Maradiago Rodriguez.pdf" download
+                        <a target="_blank" href="./cv/20250103 Resume Javier David Maradiago Rodriguez.pdf" download
                             class="btn btn--download">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:-ms-filter">
@@ -172,38 +172,30 @@
 
         <div class="row s-resume__section">
             <div class="column large-3 tab-12">
-                <h3 class="section-header-allcaps">Career</h3>
+                <h3 class="section-header-allcaps">CAREER</h3>
             </div>
             <div class="column large-9 tab-12">
                 <div class="resume-block">
                     <div class="resume-block__header">
-                        <h4 class="h3">Netsurion</h4>
+                        <h4 class="h3">Trieve</h4>
                         <p class="resume-block__header-meta">
-                            <span>Full Stack Software Engineer</span>
+                            <span>.Net Full-Stack Developer</span>
                             <span class="resume-block__header-date">
-                                February 2019 – April 2024
+                                September 2024 – Present
                             </span>
                         </p>
                     </div>
                     <ul>
-                        <li>Designed, developed, and deployed robust backend solutions for diverse projects.</li>
-                        <li>Collaborated closely with cross-functional teams to create APIs, integrate with existing
-                            APIs, and develop console applications tailored to client needs.</li>
-                        <li>Assumed ownership of the full spectrum of backend development, including database design and
-                            management in both on-premise and cloud environments.</li>
-                        <li>Utilized SQL Server expertise to optimize stored procedures, ensuring efficient data
-                            retrieval and manipulation.</li>
-                        <li>Demonstrated proficiency in cloud technologies, particularly Microsoft Azure, by
-                            orchestrating project pipelines and facilitating seamless deployments.</li>
-                        <li>Deployed and managed applications on both on-premise and cloud servers, ensuring optimal
-                            performance and reliability.</li>
+                        <li>Develop and maintain .NET Framework applications within a ticketing system, 
+                            ensuring efficient issue resolution and continuous application improvement.</li>
+                        <li>Design, build, and support Blazor .NET (C#) applications within a ticketing system, 
+                            focusing on resolving issues efficiently and enhancing application functionality.</li>
+                        <li>Utilize CosmosDB (NoSQL database) as the primary storage solution for company applications, 
+                            ensuring efficient data management and retrieval.</li>
+                        <li>Work with azure services like, Azure Devops, Cosmos DB, Container, Storage and File Shares.</li>
+                        <li>Support Differents applications Using Blazor, C# and Cosmos DB.</li>
                         <li>Actively contributed to full-stack projects, architecting solutions encompassing backend,
                             database, and frontend components.</li>
-                        <li>Utilized Docker for packaging applications, streamlining deployment processes.</li>
-                        <li>Embraced Agile methodologies, particularly Scrum, to drive project success through iterative
-                            development and continuous improvement.</li>
-                        <li>Thrived in a dynamic, collaborative environment, fostering cross-disciplinary collaboration
-                            across Cloud, DevOps, and architecture.</li>
                         <li>Maintained a proven track record of delivering innovative solutions and exhibiting a
                             commitment to excellence in software development.</li>
                     </ul>
@@ -215,7 +207,7 @@
                         <p class="resume-block__header-meta">
                             <span>Software Developer</span>
                             <span class="resume-block__header-date">
-                                August 2016 – January 2019
+                                August 2021 – July 2024
                             </span>
                         </p>
                     </div>
@@ -296,16 +288,10 @@
                 <div class="resume-block">
 
                     <p>
-                        Software Engineer with 7+ years of dedicated involvement in software development. My
-                        core competencies encompass
-                        a wide array of technologies including .NET, SQL Server, Microsoft Azure, Jenkins, SonarQube,
-                        Postman, Docker, Git, and GitHub.
-                        Furthermore, I possess proficiency in Node.js, Python (Django), TypeScript, JavaScript, React,
-                        HTML, and CSS. I maintain a proactive
-                        stance towards continuous learning and adaptation, readily embracing new technologies to meet
-                        the evolving needs of my team
-                        and projects.
-
+                        Software Engineer with over three years of dedicated involvement in software development. My core competencies encompass
+                        a wide array of technologies including .NET, Blazor, C#, SQL Server, Cosmos DB Microsoft Azure, Jenkins, SonarQube, Postman, Docker, Git, and GitHub.
+                        Furthermore, I possess proficiency in Node.js, Python (Django), TypeScript, JavaScript, React, HTML, and CSS. I maintain a proactive
+                        stance towards continuous learning and adaptation, readily embracing new technologies to meet the evolving needs of my team and projects.
                     </p>
 
                     <ul>
@@ -373,7 +359,7 @@
                         </li>
                         <li>
                             <div class="progress percent75"></div>
-                            <strong>Django</strong>
+                            <strong>CosmosDB</strong>
                         </li>
                     </ul>
 
@@ -628,7 +614,6 @@
             <div class="column large-7 medium-12">
 
                 <h4 class="huge-text">
-
                     Are you seeking a driven Software Developer poised to make a significant impact? Let's collaborate
                     to drive innovation and shape the future.
                 </h4>
@@ -677,7 +662,7 @@
         <div class="row">
             <div class="column large-4 medium-6 w-1000-stack s-footer__social-block">
                 <ul class="s-footer__social">
-                    <li><a target="_blank" href="https://www.linkedin.com/in/javier-david-maradiago-rodr%C3%ADguez/"><i
+                    <li><a target="_blank" href="https://www.linkedin.com/in/jdmaradiago"><i
                                 class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                     <li><a target="_blank" href="https://github.com/jdmaradiago2000"><i class="fab fa-github"
                                 aria-hidden="true"></i></a></li>
